# ml-ralph

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  MANIFEST.in  RALPH_CONTEXT.md  README.md  biome.json  codex.md  ml-ralph.sh  package.json  prd.json.example  pyproject.toml  tsconfig.json
.claude/skills/ml-ralph/: SKILL.md
.claude/skills/ralph-file-schemas/: SKILL.md
.claude/skills/ralph-log-events/: SKILL.md
.codex/skills/ml-ralph/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
.husky/: post-commit  pre-commit
docs/: ARCHITECTURE.md  FILE_LAYOUT.md  GETTING_STARTED.md  MVP_PLAN.md
docs/features/: RESEARCH_AGENT.md
docs/knowledge/: CLAUDE_CLI_STREAM_JSON.md
docs/plans/: 2026-01-23-ml-ralph-design.md  2026-01-23-ml-ralph-implementation.md  2026-02-09-opentui-migration-implementation.md
flowchart/src/: App.tsx
skills/prd/: SKILL.md
skills/ralph/: SKILL.md
src/: index.tsx
src/application/orchestrator/: orchestrator.ts  types.ts
src/application/state/: store.ts  types.ts
src/domain/types/: config.ts  enums.ts  index.ts
src/infrastructure/claude-client/: client.test.ts
src/infrastructure/ralph/: index.ts  init.ts  log-parser.ts  runner.ts  templates.ts
src/ml_ralph_cli/: __init__.py  cli.py  schemas.py
src/ml_ralph_cli/templates/: AGENTS.md  CLAUDE.md  CODEX.md  RALPH.md  ml-ralph.sh
src/ml_ralph_cli/templates/skills/ml-ralph/: SKILL.md
src/ml_ralph_cli/templates/skills/ralph/: SKILL.md
src/ui/: app.tsx  ink-compat.test.ts  ink.tsx  opentui-migration.test.ts
src/ui/hooks/: index.ts  use-log-stream.ts  use-ralph-state.ts  use-raw-input.ts
src/ui/screens/: monitor.tsx  output.tsx  planning.tsx
src/ui/widgets/: activity-aggregator.ts  activity-feed.test.ts  activity-feed.tsx  agent-output.tsx  chat-panel.tsx  claude-chat.tsx  cognitive-map.test.ts  cognitive-map.tsx  current-task.tsx  experiments-panel.tsx  hypotheses-panel.tsx  kanban-panel.tsx  knowledge-panel.tsx  learnings-panel.tsx  log-event-formatter.test.ts  log-event-formatter.ts  logo.tsx  markdown.tsx  metrics-chart.tsx  prd-panel.tsx  research-panel.tsx  spinner.tsx  status-bar.tsx  story-list.tsx  tabs.tsx  tmux-pane.test.ts  tmux-pane.tsx
