[project]
name = "ml-ralph"
version = "0.3.0"
description = "Autonomous ML agent with cognitive loop"
readme = "README.md"
authors = [
    { name = "Joaquin Campo", email = "jcamponario@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.15.1",
  "rich>=13.0",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ml", "agent", "workflow", "cli", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/JoaquinCampo/ml-ralph"
Repository = "https://github.com/JoaquinCampo/ml-ralph"
Issues = "https://github.com/JoaquinCampo/ml-ralph/issues"

[project.scripts]
ml-ralph = "ml_ralph_cli.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
